--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <h1>Datenschutzerklärung</h1>
 
     <p>
-        Diese App erhebt, speichert oder verarbeitet keine personenbezogenen Daten der Nutzer. Außer die Daten werden selbst vom Benutzer eingegeben und gespeichert
+        Diese App erhebt, speichert oder verarbeitet keine personenbezogenen Daten der Nutzer, außer die Daten werden selbst vom Benutzer eingegeben und gespeichert.
         
         Es werden keine Nutzerkonten benötigt.
         
